--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <div class="row">
                     <div class="project-col-1">
                         <div class="photos">
-                            <img id="mainImage" src="Assets/images/image.png" alt="">
+                            <img id="mainImage" src="assets/images/image.png" alt="">
                         </div>
                     </div>
                     <div class="project-col-2">
